force-app/main/default/objects/LeadenhancerVisit__c/LeadenhancerVisit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <nameField>
        <label>Visit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>