force-app/main/default/objects/LeadenhancerVisit__c/fields/endviewdatetime__c.field-meta.xml
<CustomField>
    <fullName>endviewdatetime__c</fullName>
    <label>End of Session</label>
    <type>DateTime</type>
</CustomField>