force-app/main/default/objects/LeadenhancerVisit__c/fields/page__c.field-meta.xml
<CustomField>
    <fullName>page__c</fullName>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>