force-app/main/default/objects/LeadenhancerVisit__c/fields/pageviewscore__c.field-meta.xml
<CustomField>
    <fullName>pageviewscore__c</fullName>
    <label>Page Score</label>
    <length>5</length>
    <type>Text</type>
</CustomField>