force-app/main/default/objects/LeadenhancerVisit__c/fields/startviewdatetime__c.field-meta.xml
<CustomField>
    <fullName>startviewdatetime__c</fullName>
    <label>Start of Session</label>
    <type>DateTime</type>
</CustomField>