force-app/main/default/objects/LeadenhancerVisit__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>